@@ -1,3 +1,8 @@
+2023-03-26  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
+	Regenerated.
+
 2023-03-24  Ulrich Müller  <ulm@gentoo.org>
 
 	* ebuild-mode.el (ebuild-repo-mode): Don't override variables if
